# blog-code

./: .gitmodules
ecs-cost optimization-with-fargate/: aws-init-vpc.sh
ecs-cost-optimization-with-fargate/: README.md  aws-init-task.sh
ecs-cost-optimization-with-fargate/aws/task-definition/: app-demo.yml
machine-learning-inference-on-industry-standard/: .env_template  Dockerfile  MakeFile  Makefile  README.md  docker-compose.yml  pyproject.toml
machine-learning-inference-on-industry-standard/app/: logger.py
machine-learning-inference-on-industry-standard/app/api/: deps.py
machine-learning-inference-on-industry-standard/app/api/api_v1/endpoints/: inference.py
machine-learning-inference-on-industry-standard/app/feature_store/: core.py
machine-learning-inference-on-industry-standard/app/feature_store/backends/: redis.py
machine-learning-inference-on-industry-standard/deploy/aws/: README.md  aws-init-bastion.sh  aws-init-cluster.sh  aws-init-feature-store.sh  aws-init-task.sh  aws-init-vpc.sh
machine-learning-inference-on-industry-standard/deploy/aws/cloudformation/task-definition/: app-demo.yml
machine-learning-inference-on-industry-standard/scripts/: build-push.sh
machine-learning-inference-on-industry-standard/visulization/: tutorial.ipynb
mlops-best-practices/: .env_template
mlops-best-practices/app/: config.py  core.py  feature_store.py  logger.py  main.py  schemas.py
mlops-best-practices/app/api/: deps.py
mlops-best-practices/app/api/api_v1/: api.py
mlops-best-practices/app/api/api_v1/endpoints/: inference.py
mlops-best-practices/app/feature_store/: key_builder.py
mlops-best-practices/scripts/: build.sh  format.sh  lint.sh
